--- a/model.html
+++ b/model.html
@@ -96,7 +96,8 @@
     <!-- Kết thúc phần nội dung ẩn -->
   
     <!-- Nút để kích hoạt sự kiện hiển thị nội dung ẩn -->
-    <button class="show-more-btn">Xem thêm</button>
+    <button class="btn btn-primary show-more-btn">Xem thêm</button>
+
      <!-- Section 2 -->
   <h3 id="section2"><strong>MÔ HÌNH TƯỚNG – YÊU ĐẠO&nbsp;</strong></h3>
   <p>So với các mô hình khác, <em>mô hình</em> <em>tướng</em> và <em>yêu đạo</em> (hay còn gọi là <em>mô hình</em>
@@ -122,7 +123,8 @@
   <!-- Kết thúc phần nội dung ẩn -->
 
   <!-- Nút để kích hoạt sự kiện hiển thị nội dung ẩn -->
-  <button class="show-more-btn">Xem thêm</button>
+  <button class="btn btn-primary show-more-btn">Xem thêm</button>
+
 
   <!-- Section 3 -->
   <h3 id="section3"><strong>MÔ HÌNH YÊU ĐẠO (THẦY RÙA)</strong></h3>
@@ -144,7 +146,8 @@
   <!-- Kết thúc phần nội dung ẩn -->
 
   <!-- Nút để kích hoạt sự kiện hiển thị nội dung ẩn -->
-  <button class="show-more-btn">Xem thêm</button>
+  <button class="btn btn-primary show-more-btn">Xem thêm</button>
+
   <p>————&nbsp;</p>
   </div>
   <!-- footer section -->
